Fixed z-index footer

--- a/cetweb/cetweb/static/foundation/stylesheets/custom.css
+++ b/cetweb/cetweb/static/foundation/stylesheets/custom.css
@@ -145,7 +145,6 @@ dl.sub-nav dd.active a {
 #site-footer {
   margin-top: 200px;
   bottom:0px;
-  z-index: 100;
   color: #cecec6;
   padding: 15px 0 0 0;
   background: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#41413c));
